- added entities, daos and services - modified package structure - added spring configuration files

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,7 @@
+auxiliary.org-netbeans-modules-web-client-tools-api.clientdebug=false
+auxiliary.org-netbeans-modules-web-client-tools-api.FIREFOX=true
+auxiliary.org-netbeans-modules-web-client-tools-api.INTERNET_5f_EXPLORER=false
+auxiliary.org-netbeans-modules-web-client-tools-api.serverdebug=true
 deploy.ant.properties.file=C:\\Users\\Matus\\.netbeans\\6.7\\tomcat60.properties
 j2ee.platform.classpath=D:\\progs\\apache-tomcat-6.0.20\\lib\\annotations-api.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\catalina-ant.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\catalina-ha.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\catalina-tribes.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\catalina.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\el-api.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\jasper-el.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\jasper.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\jsp-api.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\servlet-api.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\spring-agent.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\tomcat-coyote.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\tomcat-dbcp.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\tomcat-i18n-es.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\tomcat-i18n-fr.jar:D:\\progs\\apache-tomcat-6.0.20\\lib\\tomcat-i18n-ja.jar:D:\\progs\\apache-tomcat-6.0.20\\bin\\tomcat-juli.jar
 j2ee.server.instance=tomcat60:home=D:\\progs\\apache-tomcat-6.0.20
