--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -61,7 +61,6 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}
 javadoc.additionalparam=
 javadoc.author=false
@@ -85,7 +84,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
-runmain.jvmargs=
+runmain.jvmargs=-javaagent:lib/spring-agent.jar
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
