Several service methods implemented

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ file.reference.wsdl4j-1.5.1.jar=lib\\wsdl4j-1.5.1.jar
 file.reference.xercesImpl.jar=lib\\xercesImpl.jar
 file.reference.xml-apis.jar=lib\\xml-apis.jar
 includes=**
-j2ee.deploy.on.save=true
+j2ee.deploy.on.save=false
 j2ee.platform=1.5
 j2ee.server.type=Tomcat60
 jar.compress=false
