--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -21,10 +21,14 @@ dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.axis-ant.jar=lib\\axis-ant.jar
 file.reference.axis.jar=lib\\axis.jar
+file.reference.bcprov-jdk16-145.jar=C:\\Documents and Settings\\sneg\\Desktop\\bcprov-jdk16-145.jar
 file.reference.commons-discovery-0.2.jar=lib\\commons-discovery-0.2.jar
 file.reference.commons-logging-1.0.4.jar=lib\\commons-logging-1.0.4.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Documents and Settings\\sneg\\Desktop\\commons-logging-1.1.1\\commons-logging-1.1.1.jar
+file.reference.fontbox-1.0.0.jar=C:\\Documents and Settings\\sneg\\Desktop\\fontbox-1.0.0.jar
 file.reference.jaxrpc.jar=lib\\jaxrpc.jar
 file.reference.log4j-1.2.8.jar=lib\\log4j-1.2.8.jar
+file.reference.pdfbox-1.0.0.jar=C:\\Documents and Settings\\sneg\\Desktop\\pdfbox-1.0.0.jar
 file.reference.resolver.jar=lib\\resolver.jar
 file.reference.saaj.jar=lib\\saaj.jar
 file.reference.serializer.jar=lib\\serializer.jar
@@ -61,7 +65,11 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.fontbox-1.0.0.jar}:\
+    ${file.reference.pdfbox-1.0.0.jar}:\
+    ${file.reference.bcprov-jdk16-145.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
