--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -19,22 +19,23 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.axis-ant.jar=lib\\axis-ant.jar
-file.reference.axis.jar=lib\\axis.jar
+file.reference.axis-ant.jar=lib/axis-ant.jar
+file.reference.axis.jar=lib/axis.jar
 file.reference.bcprov-jdk16-145.jar=C:\\Documents and Settings\\sneg\\Desktop\\bcprov-jdk16-145.jar
-file.reference.commons-discovery-0.2.jar=lib\\commons-discovery-0.2.jar
-file.reference.commons-logging-1.0.4.jar=lib\\commons-logging-1.0.4.jar
+file.reference.commons-discovery-0.2.jar=lib/commons-discovery-0.2.jar
+file.reference.commons-logging-1.0.4.jar=lib/commons-logging-1.0.4.jar
 file.reference.commons-logging-1.1.1.jar=C:\\Documents and Settings\\sneg\\Desktop\\commons-logging-1.1.1\\commons-logging-1.1.1.jar
 file.reference.fontbox-1.0.0.jar=C:\\Documents and Settings\\sneg\\Desktop\\fontbox-1.0.0.jar
-file.reference.jaxrpc.jar=lib\\jaxrpc.jar
-file.reference.log4j-1.2.8.jar=lib\\log4j-1.2.8.jar
+file.reference.jaxrpc.jar=lib/jaxrpc.jar
+file.reference.log4j-1.2.8.jar=lib/log4j-1.2.8.jar
 file.reference.pdfbox-1.0.0.jar=C:\\Documents and Settings\\sneg\\Desktop\\pdfbox-1.0.0.jar
-file.reference.resolver.jar=lib\\resolver.jar
-file.reference.saaj.jar=lib\\saaj.jar
-file.reference.serializer.jar=lib\\serializer.jar
-file.reference.wsdl4j-1.5.1.jar=lib\\wsdl4j-1.5.1.jar
-file.reference.xercesImpl.jar=lib\\xercesImpl.jar
-file.reference.xml-apis.jar=lib\\xml-apis.jar
+file.reference.resolver.jar=lib/resolver.jar
+file.reference.saaj.jar=lib/saaj.jar
+file.reference.serializer.jar=lib/serializer.jar
+file.reference.spring-agent.jar=lib/spring-agent.jar
+file.reference.wsdl4j-1.5.1.jar=lib/wsdl4j-1.5.1.jar
+file.reference.xercesImpl.jar=lib/xercesImpl.jar
+file.reference.xml-apis.jar=lib/xml-apis.jar
 includes=**
 j2ee.deploy.on.save=false
 j2ee.platform=1.5
@@ -53,6 +54,7 @@ javac.classpath=\
     ${file.reference.resolver.jar}:\
     ${file.reference.saaj.jar}:\
     ${file.reference.serializer.jar}:\
+    ${file.reference.spring-agent.jar}:\
     ${file.reference.wsdl4j-1.5.1.jar}:\
     ${file.reference.xercesImpl.jar}:\
     ${file.reference.xml-apis.jar}
