- fixed tests and added libs for pdf parsing

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,13 +22,16 @@ excludes=
 file.reference.axis-ant.jar=lib/axis-ant.jar
 file.reference.axis.jar=lib/axis.jar
 file.reference.bcprov-jdk16-145.jar=C:\\Documents and Settings\\sneg\\Desktop\\bcprov-jdk16-145.jar
+file.reference.bcprov-jdk16-145.jar-1=lib/bcprov-jdk16-145.jar
 file.reference.commons-discovery-0.2.jar=lib/commons-discovery-0.2.jar
 file.reference.commons-logging-1.0.4.jar=lib/commons-logging-1.0.4.jar
 file.reference.commons-logging-1.1.1.jar=C:\\Documents and Settings\\sneg\\Desktop\\commons-logging-1.1.1\\commons-logging-1.1.1.jar
 file.reference.fontbox-1.0.0.jar=C:\\Documents and Settings\\sneg\\Desktop\\fontbox-1.0.0.jar
+file.reference.fontbox-1.0.0.jar-1=lib/fontbox-1.0.0.jar
 file.reference.jaxrpc.jar=lib/jaxrpc.jar
 file.reference.log4j-1.2.8.jar=lib/log4j-1.2.8.jar
 file.reference.pdfbox-1.0.0.jar=C:\\Documents and Settings\\sneg\\Desktop\\pdfbox-1.0.0.jar
+file.reference.pdfbox-1.0.0.jar-1=lib/pdfbox-1.0.0.jar
 file.reference.resolver.jar=lib/resolver.jar
 file.reference.saaj.jar=lib/saaj.jar
 file.reference.serializer.jar=lib/serializer.jar
@@ -57,7 +60,10 @@ javac.classpath=\
     ${file.reference.spring-agent.jar}:\
     ${file.reference.wsdl4j-1.5.1.jar}:\
     ${file.reference.xercesImpl.jar}:\
-    ${file.reference.xml-apis.jar}
+    ${file.reference.xml-apis.jar}:\
+    ${file.reference.bcprov-jdk16-145.jar-1}:\
+    ${file.reference.fontbox-1.0.0.jar-1}:\
+    ${file.reference.pdfbox-1.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
