--- a/trunk/web/WEB-INF/web.xml
+++ b/trunk/web/WEB-INF/web.xml
@@ -33,6 +33,18 @@
         <servlet-name>AxisServlet</servlet-name>
         <url-pattern>/services/*</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>springaxis</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet
+        </servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>springaxis</servlet-name>
+        <url-pattern>*.html</url-pattern>
+    </servlet-mapping>
     
     <session-config>
         <session-timeout>
